--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "JimQuartoWebsite"
+  title: "Jim Rose's Quarto Website!"
   navbar:
     left:
       - href: index.qmd
@@ -11,7 +11,7 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme: lumen
     css: styles.css
     toc: true
 
