Added projects page

--- a/_publish.yml
+++ b/_publish.yml
@@ -1,4 +1,4 @@
 - source: project
   quarto-pub:
     - id: e8263310-1ee4-41e2-9f0d-8a16f2c06fb8
-      url: 'https://quartopub.com/sites/jrose835/jimrose_quartosite'
+      url: 'https://jrose835.quarto.pub/jimrose_quartosite'
